Updated image location

--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 <title>404 Page not found | LIFTI</title><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="A Lightweight Full Text Indexer for .NET" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/lifti/404.html" />
+<meta property="og:url" content="https://mikegoatly.github.io/lifti/404.html" />
 <meta property="og:site_name" content="LIFTI" />
 <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="A Lightweight Full Text Indexer for .NET"><meta name="twitter:card" content="summary"/>
@@ -166,7 +166,7 @@
 
 
 
-<script src="/lifti/js/main.min.555f633def0cd253356303d5ae7d87a6bf9c8fae14157d7211aa618743c86e7b.js" integrity="sha256-VV9jPe8M0lM1YwPVrn2Hpr&#43;cj64UFX1yEaphh0PIbns=" crossorigin="anonymous"></script>
+<script src="/lifti/js/main.min.cc20d7c740e98c60a3b9c4807602c15b56b49c82e6c847c009dde931fad7755c.js" integrity="sha256-zCDXx0DpjGCjucSAdgLBW1a0nILmyEfACd3pMfrXdVw=" crossorigin="anonymous"></script>
 
 
 
