--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
 
 <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 
-<link rel="alternate" type="application/rss&#43;xml" href="/lifti/about/index.xml">
+<link rel="alternate" type="application/rss&#43;xml" href="https://mikegoatly.github.io/lifti/about/index.xml">
 
 
 <link rel="shortcut icon" href="/favicons/favicon.ico" >
@@ -24,7 +24,7 @@
 <title>About LIFTI | LIFTI</title><meta property="og:title" content="About LIFTI" />
 <meta property="og:description" content="A Lightweight Full Text Indexer for .NET" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/lifti/about/" />
+<meta property="og:url" content="https://mikegoatly.github.io/lifti/about/" />
 <meta property="og:site_name" content="LIFTI" />
 <meta itemprop="name" content="About LIFTI">
 <meta itemprop="description" content="A Lightweight Full Text Indexer for .NET"><meta name="twitter:card" content="summary"/>
@@ -208,7 +208,7 @@
 
 
 
-<script src="/lifti/js/main.min.555f633def0cd253356303d5ae7d87a6bf9c8fae14157d7211aa618743c86e7b.js" integrity="sha256-VV9jPe8M0lM1YwPVrn2Hpr&#43;cj64UFX1yEaphh0PIbns=" crossorigin="anonymous"></script>
+<script src="/lifti/js/main.min.cc20d7c740e98c60a3b9c4807602c15b56b49c82e6c847c009dde931fad7755c.js" integrity="sha256-zCDXx0DpjGCjucSAdgLBW1a0nILmyEfACd3pMfrXdVw=" crossorigin="anonymous"></script>
 
 
 
