--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 
-<link rel="alternate" type="application/rss&#43;xml" href="/lifti/index.xml">
+<link rel="alternate" type="application/rss&#43;xml" href="https://mikegoatly.github.io/lifti/index.xml">
 
 
 <link rel="shortcut icon" href="/favicons/favicon.ico" >
@@ -24,12 +24,12 @@
 <title>LIFTI</title><meta property="og:title" content="LIFTI - A Lightweight Full Text Indexing library for .NET" />
 <meta property="og:description" content="A Lightweight Full Text Indexer for .NET" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/lifti/" />
-<meta property="og:image" content="/lifti/featured-background.jpg"/>
+<meta property="og:url" content="https://mikegoatly.github.io/lifti/" />
+<meta property="og:image" content="https://mikegoatly.github.io/lifti/featured-background.jpg"/>
 <meta property="og:site_name" content="LIFTI" />
 <meta itemprop="name" content="LIFTI - A Lightweight Full Text Indexing library for .NET">
 <meta itemprop="description" content="A Lightweight Full Text Indexer for .NET"><meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="/lifti/featured-background.jpg"/>
+<meta name="twitter:image" content="https://mikegoatly.github.io/lifti/featured-background.jpg"/>
 <meta name="twitter:title" content="LIFTI - A Lightweight Full Text Indexing library for .NET"/>
 <meta name="twitter:description" content="A Lightweight Full Text Indexer for .NET"/>
 
@@ -260,7 +260,7 @@ the code!</p>
 
 
 
-<script src="/lifti/js/main.min.555f633def0cd253356303d5ae7d87a6bf9c8fae14157d7211aa618743c86e7b.js" integrity="sha256-VV9jPe8M0lM1YwPVrn2Hpr&#43;cj64UFX1yEaphh0PIbns=" crossorigin="anonymous"></script>
+<script src="/lifti/js/main.min.cc20d7c740e98c60a3b9c4807602c15b56b49c82e6c847c009dde931fad7755c.js" integrity="sha256-zCDXx0DpjGCjucSAdgLBW1a0nILmyEfACd3pMfrXdVw=" crossorigin="anonymous"></script>
 
 
 
