--- a/samples/Blazor/wwwroot/index.html
+++ b/samples/Blazor/wwwroot/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>BlazorApp1</title>
+    <title>LIFTI Examples</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Blazor.styles.css" rel="stylesheet" />
+    <link href="logo.svg" rel="icon" />
 </head>
 
 <body>
